Add installation for cfssl and cfssljson to e2e workflow

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,6 +32,11 @@ jobs:
         chmod +x ./kind
         sudo mv ./kind /usr/local/bin/kind
 
+        # Install cfssl and cfssljson
+        go install github.com/cloudflare/cfssl/cmd/cfssl@latest
+        go install github.com/cloudflare/cfssl/cmd/cfssljson@latest
+        echo "$HOME/go/bin" >> $GITHUB_PATH
+
     - name: Setup local cluster
       run: make local-cluster
 
