Update YAML file paths in e2e.sh script for consistency

--- a/namespace-based/capsule/scripts/yaml/group-of-tenant-profile.yaml
+++ b/namespace-based/capsule/scripts/yaml/group-of-tenant-profile.yaml
@@ -4,7 +4,7 @@
 apiVersion: capsule.clastix.io/v1beta2
 kind: Tenant
 metadata:
-  name: oil  # Unique name for this Tenant
+  name: oil-group  # Unique name for this Tenant
 
 spec:
   # Owners section defines who has administrative access to this Tenant
