Update namespace quota to 2 in complete-tenant.yaml

--- a/namespace-based/capsule/scripts/yaml/complete-tenant.yaml
+++ b/namespace-based/capsule/scripts/yaml/complete-tenant.yaml
@@ -18,7 +18,7 @@ spec:
 
   # NamespaceOptions define settings for namespaces within this Tenant
   namespaceOptions:
-    quota: {}  # No specific quota set for namespaces
+    quota: 2  # No specific quota set for namespaces
     additionalMetadata:
       labels:
         capsule.clastix.io/tenant: default-tenant-sentinel
