--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,12 +41,7 @@ jobs:
         run: make local-cluster
 
       - name: Run E2E tests
-        run: |
-          set -euo pipefail
-          make e2e
-        shell: bash
-        env:
-          SHELL: /bin/bash
+        run: make e2e
 
       - name: Cleanup
         if: always()
